--- a/Project_1/app/views/comments/index.html.erb
+++ b/Project_1/app/views/comments/index.html.erb
@@ -24,5 +24,5 @@
 
 <br>
 
-<%= link_to 'New Comment', new_comment_path %>
+<%= link_to 'New Comment', new_comment_path %> |
 <%= link_to 'Back to Home Page', welcome_index_path %>
