--- a/Project_1/app/views/posts/index.html.erb
+++ b/Project_1/app/views/posts/index.html.erb
@@ -26,5 +26,5 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New Post', new_post_path %> |
 <%= link_to 'Back to Home Page', welcome_index_path %>
