--- a/Project_1/app/views/categories/index.html.erb
+++ b/Project_1/app/views/categories/index.html.erb
@@ -24,5 +24,5 @@
 
 <br>
 
-<%= link_to 'New Category', new_category_path %>s
+<%= link_to 'New Category', new_category_path %> |
 <%= link_to 'Back to Home Page', welcome_index_path %>
