--- a/Project_1/app/views/categories/index.html.erb
+++ b/Project_1/app/views/categories/index.html.erb
@@ -1,28 +1,26 @@
-<p id="notice"><%= notice %></p>
+<h1>Категории</h1>
 
-<h1>Listing Categories</h1>
-
-<table>
+<table class="table">
   <thead>
-    <tr>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
+  <tr>
+    <th>Categories</th>
+
+    <th colspan="3"></th>
+  </tr>
   </thead>
 
   <tbody>
-    <% @categories.each do |category| %>
+  <% @categories.each do |category| %>
       <tr>
         <td><%= category.title %></td>
         <td><%= link_to 'Show', category %></td>
         <td><%= link_to 'Edit', edit_category_path(category) %></td>
         <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Category', new_category_path %> |
-<%= link_to 'Back to Home Page', welcome_index_path %>
+<%= link_to 'Новая категория', new_category_path %>
