--- a/Project_1/app/views/comments/show.html.erb
+++ b/Project_1/app/views/comments/show.html.erb
@@ -5,6 +5,6 @@
   <%= @comment.body %>
 </p>
 
-<%= link_to 'Edit', edit_comment_path(@comment) %> |
-<%= link_to 'Back', comments_path %>
 
+<%= link_to 'Edit Comment', edit_comment_path(@comment) %> |
+<%= link_to 'Delete Comment', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
