--- a/Project_1/app/views/layouts/application.html.erb
+++ b/Project_1/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Project1</a>
+        <a class="navbar-brand" href="/">Main</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <li><%= link_to "Link1", "/path1"  %></li>
@@ -64,17 +64,23 @@
         </div>
         <div class="col-lg-3">
           <div class="well sidebar-nav">
-            <h3>Рубрики</h3>
+            <h3>Tags</h3>
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <% Category.all.each do |category| %>
+                <li><%= link_to category.title, category  %></li>
+              <%end%>
+
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
       </div><!--/row-->
 
+<br>
+<%= link_to 'List Posts', posts_path %>
+<br>
+<br>
+<br>
+<hr>
       <footer>
         <p>&copy; Dmitry Olkhovik, 2015</p>
       </footer>
