--- a/Project_1/app/views/posts/_form.html.erb
+++ b/Project_1/app/views/posts/_form.html.erb
@@ -1,24 +1,21 @@
 <%= form_for(@post) do |f| %>
-  <% if @post.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
-
-      <ul>
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <%= render 'common/errors', object: @post %>
 
   <div class="field">
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </div>
+
   <div class="field">
     <%= f.label :body %><br>
     <%= f.text_area :body %>
   </div>
+
+<div class="field">
+    <%= f.label :category_ids, 'Tags' %><br>
+    <%= f.collection_select :category_ids, Category.all, :id, :title, {}, { multiple: true } %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
