--- a/Project_1/app/views/posts/index.html.erb
+++ b/Project_1/app/views/posts/index.html.erb
@@ -1,30 +1,14 @@
-<p id="notice"><%= notice %></p>
+<%= content_for :title do %>
+    My habr - Main Publication
+<% end %>
 
-<h1>Listing Posts</h1>
+<%= link_to 'New puplishing', new_post_path, class: 'btn btn-primary' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.body %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<h1>List Posts</h1>
+
+<%= render @posts %>
+
 
 <br>
 
-<%= link_to 'New Post', new_post_path %> |
-<%= link_to 'Back to Home Page', welcome_index_path %>
