--- a/Project_1/app/views/posts/show.html.erb
+++ b/Project_1/app/views/posts/show.html.erb
@@ -1,21 +1,29 @@
-<p id="notice"><%= notice %></p>
+<h1><%= @post.title %></h1>
+
+<p><%= @post.body %></p>
 
 <p>
-  <strong>Title:</strong>
-  <%= @post.title %>
+  <strong>Tags: </strong>
+  <% unless @post.categories.empty? %>
+
+    <%= @post.categories_titles %>
+<% else %>
+    <p>Choose Tag</p>
+
+<% end %>
 </p>
 
-<p>
-  <strong>Body:</strong>
-  <%= @post.body %>
-</p>
+<h3>Comments</h3>
+<% unless @post.comments.empty? %>
 
-
-<h3>Комментарии</h3>
-<% @post.comments.each do |comment| %>
-<p><%= comment.body %></p>
+    <%= render @comments %>
+<% else %>
+    <p>There is no Comments</p>
 <% end %>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
-<%= link_to 'Back', posts_path %> |
-<%= link_to 'Back to Home Page', welcome_index_path %>
+<h4>New Comment</h4>
+<%= render 'comments/form' %>
+
+
+    <%= link_to 'Edit Post', edit_post_path(@post) %> |
+    <%= link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
