--- a/Project_1/app/views/comments/show.html.erb
+++ b/Project_1/app/views/comments/show.html.erb
@@ -5,6 +5,7 @@
   <%= @comment.body %>
 </p>
 
-
+<% if @comment.user == current_user %>
 <%= link_to 'Edit Comment', edit_comment_path(@comment) %> |
 <%= link_to 'Delete Comment', comment, method: :delete, data: { confirm: 'Are you sure?' } %>
+<%end %>
