--- a/Project_1/app/views/posts/show.html.erb
+++ b/Project_1/app/views/posts/show.html.erb
@@ -13,6 +13,13 @@
 <% end %>
 </p>
 
+<% if @post.user.present? %>
+    <p>
+      <strong>Автор:</strong>
+      <%= @post.user.email %>
+    </p>
+<% end %>
+
 <h3>Comments</h3>
 <% unless @post.comments.empty? %>
 
@@ -25,5 +32,8 @@
 <%= render 'comments/form' %>
 
 
+<% if current_user && current_user.owner_of?(@post)  %>
     <%= link_to 'Edit Post', edit_post_path(@post) %> |
     <%= link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
+
