добавлен Admin User, создана Админка

--- a/Project_1/app/views/categories/index.html.erb
+++ b/Project_1/app/views/categories/index.html.erb
@@ -13,9 +13,9 @@
   <% @categories.each do |category| %>
       <tr>
         <td><%= category.title %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show Category', category %></td>
+        <td><%= link_to 'Edit Category', edit_category_path(category) %></td>
+        <td><%= link_to 'Delete Category', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
   <% end %>
   </tbody>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'Новая категория', new_category_path %>
+<%= link_to 'New Category', new_category_path %>
