--- a/Project_1/app/views/layouts/admin.html.erb
+++ b/Project_1/app/views/layouts/admin.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Project1" %></title>
+    <title><%= content_for?(:title) ? yield(:title) : "MyHabr" %></title>
     <%= csrf_meta_tags %>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -48,21 +48,15 @@
         <a class="navbar-brand" href="/">Main</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li>
-              <% if current_user && current_user.admin? %>
-                  <%= link_to 'Admin Panel', admin_categories_path %>
-              <% end %>
-            </li>
+            <li><%= link_to "Categories", admin_categories_path  %></li>
+            <li><%= link_to "Users", admin_users_path  %></li>
 
-            <% if user_signed_in? %>
-                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
-                  <span>Email: <%= current_user.email %></span>
-              <% else %>
-                  <br>
-                  <li><%= link_to "Sign In", new_user_session_path %></li>
-                  <li><%= link_to "Sign Up", new_user_registration_path %></li>
-              <% end %>
-
+            <%if user_signed_in? %>
+                <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete  %></li>
+                <li><%= current_user.email %></li>
+            <% else %>
+                <li><%= link_to "Sign In", new_user_session_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
@@ -74,27 +68,10 @@
           <%= bootstrap_flash %>
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-          <div class="well sidebar-nav">
-            <h3>Tags</h3>
-            <ul class="nav nav-list">
-              <% Category.all.each do |category| %>
-                <li><%= link_to category.title, category  %></li>
-              <%end%>
-
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
       </div><!--/row-->
 
-<br>
-<%= link_to 'List Posts', posts_path %>
-<br>
-<br>
-<br>
-<hr>
       <footer>
-        <p>&copy; Dmitry Olkhovik, 2015</p>
+        <p>&copy; Dmitry Olkhovik 2015</p>
       </footer>
 
     </div> <!-- /container -->
