--- a/Project_1/app/views/posts/_post.html.erb
+++ b/Project_1/app/views/posts/_post.html.erb
@@ -14,4 +14,18 @@
   </div>
   <hr>
 
+  <% if user_signed_in? %>
+      <% if current_user.owner_of?(post) %>
+        <td><%= link_to 'Edit', edit_post_path(post) %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+      <td>
+        <% if current_user.subscribed_to?(post) %>
+          <%= link_to 'Unsubscribe', current_user.subscription_for(post), method: :delete%>
+        <% else %>
+            <%= link_to 'Subscribe', post_subscriptions_path(post), method: :post %>
+        <% end %>
+      </td>
+  <% end %>
+
 </div>
