--- a/Project_1/app/views/posts/index.html.erb
+++ b/Project_1/app/views/posts/index.html.erb
@@ -2,6 +2,10 @@
     My habr - Main Publication
 <% end %>
 
+<%= link_to "Мои посты", my_posts_path  %>
+<%= link_to "Черновики", drafts_posts_path  %>
+<%= link_to "На модерации", moderation_posts_path  %>
+
 <%= link_to 'New puplishing', new_post_path, class: 'btn btn-primary' %>
 
 
