--- a/Project_1/app/views/posts/show.html.erb
+++ b/Project_1/app/views/posts/show.html.erb
@@ -29,5 +29,14 @@
 <% if current_user && current_user.owner_of?(@post)  %>
     <%= link_to 'Edit Post', edit_post_path(@post) %> |
     <%= link_to 'Delete Post', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% case @post.status%>
+      <% when "draft" %>
+        <%= link_to 'Отправить на модерацию', to_moderation_post_path(@post), method: :patch %>
+      <% when "moderation" %>
+        <%= link_to 'Опубликовать', publish_post_path(@post), method: :patch if current_user.admin? %>
+        <%= link_to 'Вернуть в черновики', to_draft_post_path(@post), method: :patch %>
+      <% when "published" %>
+        <%= link_to 'Вернуть в черновики', to_draft_post_path(@post), method: :patch %>
+    <% end %>
 <% end %>
 
